--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -815,21 +815,28 @@ s13Data = {
     
     return Plot.plot({
       marginLeft: marginLeft,
-      marginTop: 30,
-      marginBottom: 50,
+      marginTop: 40,
+      marginBottom: 60,
       width: 900,
       height: chartHeight,
+      style: {
+        fontSize: "14px"  // Increase base font size for all text
+      },
       x: {
         label: "RPSS (0-1) or Δ",
         labelAnchor: "center",
         domain: [xMin, xMax],
         ticks: ticks,
-        grid: true
+        grid: true,
+        tickSize: 6,
+        fontSize: 14  // Larger tick labels
       },
       y: {
         label: null,
         domain: yDomain,
-        padding: 0.3  // Increased from 0.15 to 0.3 for tighter bars
+        padding: 0.3,  // Increased from 0.15 to 0.3 for tighter bars
+        tickSize: 6,
+        fontSize: 13  // Larger y-axis labels (country names)
       },
       color: {
         legend: true,
@@ -838,10 +845,23 @@ s13Data = {
       },
       marks: [
         // X-axis at top (without label)
-        Plot.axisX({ anchor: "top", label: null, ticks: ticks }),
+        Plot.axisX({ 
+          anchor: "top", 
+          label: null, 
+          ticks: ticks,
+          fontSize: 14,
+          tickSize: 6
+        }),
         
         // X-axis at bottom (with label) - this is the default
-        Plot.axisX({ anchor: "bottom", label: "RPSS (0-1) or Δ", ticks: ticks }),
+        Plot.axisX({ 
+          anchor: "bottom", 
+          label: "RPSS (0-1) or Δ", 
+          ticks: ticks,
+          fontSize: 14,
+          tickSize: 6,
+          labelFontSize: 16  // Larger x-axis title
+        }),
         
         // Reference line at 0
         Plot.ruleX([0], { stroke: "#333", strokeWidth: 1 }),
@@ -1056,17 +1076,27 @@ s14MapData = {
       height: Math.max(800, heatmapData.length * 30),
       marginLeft: 250,
       marginBottom: 120,
+      style: {
+        fontSize: "16px"  // Increase base font size
+      },
       x: { 
         label: null,
-        tickRotate: -45
+        tickRotate: -45,
+        fontSize: 16,  // Larger x-axis labels
+        tickSize: 8
       },
-      y: { label: null },
+      y: { 
+        label: null,
+        fontSize: 15,  // Larger y-axis labels
+        tickSize: 8
+      },
       color: {
         type: "linear",
         domain: [0, 1],
         scheme: "RdYlGn",
         legend: true,
-        label: "Value (0-1)"
+        label: "Value (0-1)",
+        fontSize: 16  // Larger legend text
       },
       marks: [
         Plot.cell(heatData, {
