feat(solutionsNb): Finish adding the new pretty toc

--- a/notebooks/solutionNb/solutionNB.qmd
+++ b/notebooks/solutionNb/solutionNB.qmd
@@ -8,9 +8,18 @@ date-edited: today
 ---
 
 ```{ojs}
-import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs";
+import { atlasHero } from "/helpers/uiComponents.ojs";
+import { atlasTOC } from "/helpers/toc.ojs";
+```
+
+```{ojs}
 hero_url = "./../../images/default_crop.webp";
 atlasHero(nbTitle, hero_url);
+
+atlasTOC({
+  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
+  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
+});
 ```
 
 # `{ojs} heading1` {#example-heading1}
@@ -38,19 +47,6 @@ atlasHero(nbTitle, hero_url);
 # `{ojs} nbSummary` {#summary}
 
 # `{ojs} appendix` {#appendix}
-
-```{ojs}
-toc_bottom = atlasTOC({
-  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
-  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
-});
-
-htl.html`
-      <div class='floating-toc'>
-      ${toc_bottom}
-      </div>
-      `;
-```
 
 # Source code {#source-code .hidden}
 
