feat(economicReturns): Finish adding new toc to this notebook

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -15,16 +15,22 @@ execute:
 
 ```{ojs}
 import {
-  atlasTOC,
   atlasHero,
   dropdown_section,
   downloadButton,
   makeTooltipLabel,
 } from "/helpers/uiComponents.ojs";
 
-hero_url = "./../../images/default_crop.webp";
+import { atlasTOC } from "/helpers/toc.ojs";
+```
 
-atlasHero(nbTitle, hero_url);
+```{ojs}
+atlasHero(nbTitle, "./../../images/default_crop.webp");
+
+atlasTOC({
+  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
+  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
+});
 ```
 
 # `{ojs} nbOverview` {#overview}
@@ -375,19 +381,6 @@ indicatorSelector = {
 `{ojs} _lang(nbText.methods.intro)`
 
 # `{ojs} appendix` {#appendix}
-
-```{ojs}
-toc_bottom = atlasTOC({
-  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
-  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
-});
-
-htl.html`
-      <div class='floating-toc'>
-      ${toc_bottom}
-      </div>
-      `;
-```
 
 # Source code {#source-code}
 
