feat(hazexposureNB): Finish adding new TOC into notebook

--- a/notebooks/hazardExposure/hazardExposure.qmd
+++ b/notebooks/hazardExposure/hazardExposure.qmd
@@ -8,7 +8,8 @@ date-edited: today
 ---
 
 ```{ojs}
-import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs";
+import { atlasHero } from "/helpers/uiComponents.ojs";
+import { atlasTOC } from "/helpers/toc.ojs";
 import { enhancedMultiSelect } from "/helpers/enhancedMultiSelect.ojs";
 
 hero_url = "./../../images/default_crop.webp";
@@ -17,6 +18,11 @@ hero_url = "./../../images/default_crop.webp";
 // It can also be a url.
 
 atlasHero(nbTitle, hero_url);
+
+atlasTOC({
+  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
+  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
+});
 ```
 
 ## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
@@ -104,19 +110,6 @@ or module imported in each will result in an error -->
 {{< lipsum 1 >}}
 
 # `{ojs} appendix` {#appendix}
-
-```{ojs}
-toc_bottom = atlasTOC({
-  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
-  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
-});
-
-htl.html`
-      <div class='floating-toc'>
-      ${toc_bottom}
-      </div>
-      `;
-```
 
 # Source code {#source-code .hidden}
 
