feat(glossary): Update Glossary to use same toc styling as the notebooks

--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -14,7 +14,7 @@ filters:
 # Atlas Definitions
 
 ```{=html}
-<div id="toc" style="margin-bottom: 30px;"></div>
+<div id="toc" class="atlas-toc"></div>
 
 <input
   type="text"
@@ -153,31 +153,33 @@ function sanitizeId(str) {
 function renderTOC() {
   if (!glossaryData) return;
 
+  // Collect sections
   const sections = {};
   Object.entries(glossaryData).forEach(([key, entry]) => {
-    const section = entry.Section || 'Other';
+    const section = entry.Section || "Other";
     sections[section] = true;
   });
 
-  // Start HTML
-  let tocHtml = '<h2 style="margin-bottom: 10px;">Sections:</h2>';
-  tocHtml += '<div style="display: flex; flex-wrap: wrap; gap: 6px; align-items: center;">';
-
-  // Add links inline with separators
   const sectionNames = Object.keys(sections).sort();
+
+  // Build TOC HTML (class-based, no inline styling)
+  let tocHtml = `
+    <div class="atlas-toc-heading">Sections</div>
+    <div class="atlas-toc-list">
+  `;
+
   sectionNames.forEach((section, i) => {
-    const sectionId = sanitizeId(section);
+    const id = sanitizeId(section);
     tocHtml += `
-      <a href="#section-${sectionId}"
-         style="text-decoration: none;">
-         ${section}
-      </a>
-      ${i < sectionNames.length - 1 ? '<span style="color: #999;">|</span>' : ''}
+      <a class="toc-link" href="#section-${id}">${section}</a>
     `;
   });
 
-  tocHtml += '</div>';
-  document.getElementById('toc').innerHTML = tocHtml;
+  tocHtml += `</div>`;
+
+  document.getElementById("toc").innerHTML = tocHtml;
+
+  attachGlossaryScrollSpy();
 }
 
 function attachTOCListeners() {
@@ -191,6 +193,38 @@ function attachTOCListeners() {
       }
     });
   });
+}
+
+function attachGlossaryScrollSpy() {
+  const links = Array.from(document.querySelectorAll("#toc .toc-link"));
+  if (!links.length) return;
+
+  // Map each link to its target section element
+  const sections = links.map(link => {
+    const id = link.getAttribute("href").slice(1); // remove #
+    return document.getElementById(id);
+  });
+
+  function setActiveLink(activeLink) {
+    links.forEach(link => link.classList.remove("active"));
+    if (activeLink) activeLink.classList.add("active");
+  }
+
+  function onScroll() {
+    // Compute distances
+    const distances = sections.map(sec =>
+      Math.abs(sec.getBoundingClientRect().top)
+    );
+
+    // Identify closest section
+    const minIndex = distances.indexOf(Math.min(...distances));
+    const activeLink = links[minIndex];
+
+    setActiveLink(activeLink);
+  }
+
+  window.addEventListener("scroll", onScroll);
+  onScroll(); // run once
 }
 
 // Render glossary
