feat(examples): Update TOC to new atlas TOC in example Notebooks

--- a/notebooks/genderNB/gender.qmd
+++ b/notebooks/genderNB/gender.qmd
@@ -7,6 +7,17 @@ execute:
   echo: false
 ---
 
+```{ojs}
+import { atlasTOC } from '/helpers/toc.ojs' 
+{
+  await nbText // force wait/reload with nbText to load so headings have correct labels/languages
+  return atlasTOC({
+      heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
+      skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
+      })
+}
+```
+
 # `{ojs} nbTitle` {class='title' #notebook-title}
 
 ```{ojs}
@@ -930,23 +941,6 @@ ${row[c].split(", ").map((v) => _lang(nbText.BridgeGap.table.values[v.toLowerCas
 # `{ojs} Summary` {#summary}
 
 `{ojs} _lang(nbText.Summary.text)`
-
-```{ojs}
-// This section needs to be above the .hidden for it to work
-import { atlasTOC } from '/helpers/uiComponents.ojs' 
-toc_bottom = {
-  await nbText // force wait/reload with nbText to load so headings have correct labels/languages
-  return atlasTOC({
-      heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
-      skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
-      })
-}
-  
-htl.html`
-  <div class='floating-toc'>
-    ${toc_bottom}
-  </div>`
-```
 
 # Source code {#source-code .hidden}
 
