--- a/notebooks/solutionsNB/DiscoverSolutions.qmd
+++ b/notebooks/solutionsNB/DiscoverSolutions.qmd
@@ -8,6 +8,17 @@ execute:
   echo: false
 ---
 
+```{ojs}
+import { atlasTOC } from '/helpers/toc.ojs' 
+{
+  await nbText // force wait/reload with nbText to load so headings have correct labels/languages
+  return atlasTOC({
+      heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
+      skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
+      })
+}
+```
+
 # `{ojs} nbTitle` {class='title' #notebook-title}
 
 ```{ojs}
@@ -1631,23 +1642,6 @@ md`
 ### ${_lang(nbText.methodsSources.h3Era)}
 ${_lang(nbText.methodsSources.h3EraSubsection)}
 `;
-```
-
-```{ojs}
-// This section needs to be above the .hidden for it to work
-import { atlasTOC } from '/helpers/uiComponents.ojs' 
-toc_bottom = {
-  await nbText // force wait/reload with nbText to load so headings have correct labels/languages
-  return atlasTOC({
-      heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
-      skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
-      })
-}
-  
-htl.html`
-  <div class='floating-toc'>
-    ${toc_bottom}
-  </div>`
 ```
 
 # Source code {#source-code .hidden}
