Fix Section 1.4 threshold functionality, change Section 1.1 default to Raw values, and improve tooltip visibility

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -267,7 +267,7 @@ viewof s11ViewType = Inputs.radio(["Map", "Table"], {
 
 viewof s11MapMode = Inputs.radio(["Raw values", "Classified"], {
   label: _lang(cis.mapModeLabel),
-  value: "Classified"
+  value: "Raw values"
 })
 ```
 
@@ -332,23 +332,33 @@ s11MapData = {
     const useRaw = s11MapMode === "Raw values";
     
     return htl.html`<style>
+      /* Tooltip styling with much larger font sizes */
       .plot-tip,
       [class*="plot-tip"],
       .observablehq .plot-tip,
-      .observablehq [class*="plot-tip"] {
-        font-size: 24px !important;
-        padding: 30px 40px !important;
-        line-height: 2.2 !important;
-        min-width: 500px !important;
-        max-width: 700px !important;
-        min-height: 200px !important;
+      .observablehq [class*="plot-tip"],
+      div[class*="plot-tip"],
+      body .plot-tip,
+      body [class*="plot-tip"] {
+        font-size: 28px !important;
+        padding: 30px 35px !important;
+        line-height: 2 !important;
+        min-width: 400px !important;
+        max-width: 600px !important;
         box-sizing: border-box !important;
+        background: white !important;
+        border: 3px solid #333 !important;
+        border-radius: 8px !important;
+        box-shadow: 0 6px 16px rgba(0,0,0,0.4) !important;
       }
       .plot-tip table,
       [class*="plot-tip"] table,
       .observablehq .plot-tip table,
-      .observablehq [class*="plot-tip"] table {
-        font-size: 24px !important;
+      .observablehq [class*="plot-tip"] table,
+      div[class*="plot-tip"] table,
+      body .plot-tip table,
+      body [class*="plot-tip"] table {
+        font-size: 28px !important;
         width: 100% !important;
       }
       .plot-tip th,
@@ -358,22 +368,36 @@ s11MapData = {
       .observablehq .plot-tip th,
       .observablehq .plot-tip td,
       .observablehq [class*="plot-tip"] th,
-      .observablehq [class*="plot-tip"] td {
-        padding: 16px 20px !important;
-        font-size: 24px !important;
+      .observablehq [class*="plot-tip"] td,
+      div[class*="plot-tip"] th,
+      div[class*="plot-tip"] td,
+      body .plot-tip th,
+      body .plot-tip td,
+      body [class*="plot-tip"] th,
+      body [class*="plot-tip"] td {
+        padding: 15px 18px !important;
+        font-size: 28px !important;
+        line-height: 1.8 !important;
       }
       .plot-tip th,
       [class*="plot-tip"] th,
       .observablehq .plot-tip th,
-      .observablehq [class*="plot-tip"] th {
+      .observablehq [class*="plot-tip"] th,
+      div[class*="plot-tip"] th,
+      body .plot-tip th,
+      body [class*="plot-tip"] th {
         font-weight: 700 !important;
-        font-size: 24px !important;
+        font-size: 28px !important;
+        text-align: left !important;
       }
       .plot-tip *,
       [class*="plot-tip"] *,
       .observablehq .plot-tip *,
-      .observablehq [class*="plot-tip"] * {
-        font-size: 24px !important;
+      .observablehq [class*="plot-tip"] *,
+      div[class*="plot-tip"] *,
+      body .plot-tip *,
+      body [class*="plot-tip"] * {
+        font-size: 28px !important;
       }
     </style>
     <div style="display: flex; gap: 20px;">
@@ -400,24 +424,9 @@ s11MapData = {
             Plot.geo(s11MapData, {
               fill: useRaw ? d => d.properties.weatherStation : d => d.properties.weatherStationClass,
               stroke: "#333",
-              strokeWidth: 0.5
-            }),
-            Plot.tip(s11MapData.features, Plot.pointer(Plot.centroid({
-              channels: {
-                Region: {
-                  value: d => d.properties.regionName
-                },
-                "Weather Station": {
-                  value: d => d.properties.weatherStation != null ? d.properties.weatherStation.toFixed(3) : 'N/A'
-                },
-                Class: {
-                  value: d => d.properties.weatherStationClass
-                },
-               
-              },
-             
-           
-            })))
+              strokeWidth: 0.5,
+              title: d => `${d.properties.regionName}\nWeather Station: ${d.properties.weatherStation != null ? d.properties.weatherStation.toFixed(3) : 'N/A'}\nClass: ${d.properties.weatherStationClass}`
+            })
           ]
         })}
       </div>
@@ -444,21 +453,9 @@ s11MapData = {
             Plot.geo(s11MapData, {
               fill: useRaw ? d => d.properties.cloudCover : d => d.properties.cloudCoverClass,
               stroke: "#333",
-              strokeWidth: 0.5
-            }),
-            Plot.tip(s11MapData.features, Plot.pointer(Plot.centroid({
-              channels: {
-                Region: {
-                  value: d => d.properties.regionName
-                },
-                "Cloud Cover": {
-                  value: d => d.properties.cloudCover != null ? d.properties.cloudCover.toFixed(3) : 'N/A'
-                },
-                Class: {
-                  value: d => d.properties.cloudCoverClass
-                }
-              }
-            })))
+              strokeWidth: 0.5,
+              title: d => `${d.properties.regionName}\nCloud Cover: ${d.properties.cloudCover != null ? d.properties.cloudCover.toFixed(3) : 'N/A'}\nClass: ${d.properties.cloudCoverClass}`
+            })
           ]
         })}
       </div>
@@ -997,6 +994,10 @@ s14MapData = {
 // Section 1.4 Visualization
 {
   if (s14ViewType === "Map") {
+    // Apply threshold to highlight regions
+    const aboveThreshold = s14MapData.features.filter(f => f.properties.cisReadiness >= s14Threshold);
+    const belowThreshold = s14MapData.features.filter(f => f.properties.cisReadiness < s14Threshold);
+    
     return Plot.plot({
       width: 2000,
       height: 1000,
@@ -1009,12 +1010,14 @@ s14MapData = {
         label: "CIS Readiness Index (0-1)"
       },
       marks: [
-        Plot.geo(s14MapData, {
+        // Regions below threshold - slightly transparent
+        Plot.geo(belowThreshold, {
           fill: d => d.properties.cisReadiness,
-          stroke: "#333",
+          fillOpacity: 0.5,
+          stroke: "#999",
           strokeWidth: 0.5,
           title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
-                      `CIS Readiness: ${d.properties.cisReadiness?.toFixed(3) || 'N/A'}\n` +
+                      `CIS Readiness: ${d.properties.cisReadiness?.toFixed(3) || 'N/A'} (Below threshold)\n` +
                       `Class: ${d.properties.cisReadinessClass}\n` +
                       `Weather Station: ${d.properties.weatherStationClass}\n` +
                       `Cloud Cover: ${d.properties.cloudCoverClass}\n` +
@@ -1022,7 +1025,21 @@ s14MapData = {
                       `Short-term: ${d.properties.shortTerm?.toFixed(3) || 'N/A'}\n` +
                       `Long-term: ${d.properties.longTerm?.toFixed(3) || 'N/A'}`
         }),
-        Plot.ruleX([s14Threshold])
+        // Regions above threshold - fully opaque with bold border
+        Plot.geo(aboveThreshold, {
+          fill: d => d.properties.cisReadiness,
+          fillOpacity: 1,
+          stroke: "#333",
+          strokeWidth: 1.5,
+          title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
+                      `CIS Readiness: ${d.properties.cisReadiness?.toFixed(3) || 'N/A'} (Above threshold)\n` +
+                      `Class: ${d.properties.cisReadinessClass}\n` +
+                      `Weather Station: ${d.properties.weatherStationClass}\n` +
+                      `Cloud Cover: ${d.properties.cloudCoverClass}\n` +
+                      `Precip Agreement: ${d.properties.precipAgreementClass}\n` +
+                      `Short-term: ${d.properties.shortTerm?.toFixed(3) || 'N/A'}\n` +
+                      `Long-term: ${d.properties.longTerm?.toFixed(3) || 'N/A'}`
+        })
       ]
     });
   } else if (s14ViewType === "Table") {
