Change Section 1.2 default to Raw values and improve tooltip format to show region and country

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -531,7 +531,7 @@ viewof s12ViewType = Inputs.radio(["Map", "Table"], {
 
 viewof s12MapMode = Inputs.radio(["Raw values", "Classified"], {
   label: _lang(cis.mapModeLabel),
-  value: "Classified"
+  value: "Raw values"
 })
 ```
 
@@ -594,9 +594,12 @@ s12MapData = {
           fill: useRaw ? d => d.properties.precipAgreement : d => d.properties.precipAgreementClass,
           stroke: "#333",
           strokeWidth: 0.5,
-          title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
-                      `Satellite Agreement: ${d.properties.precipAgreement?.toFixed(1) || 'N/A'}\n` +
-                      `Class: ${d.properties.precipAgreementClass}`
+          title: d => {
+            const regionName = d.properties.admin2_name || d.properties.admin1_name || d.properties.admin0_name;
+            const country = d.properties.admin0_name;
+            const fullName = regionName === country ? regionName : `${regionName}, ${country}`;
+            return `${fullName}\nSatellite Agreement: ${d.properties.precipAgreement?.toFixed(1) || 'N/A'}\nClass: ${d.properties.precipAgreementClass}`;
+          }
         })
       ]
     });
