--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -7,22 +7,28 @@ nb-authors:
   - Pete Stewart
 date-created: "2025-11-10"
 date-edited: today
+
+format:
+  html:
+    include-in-header:
+      - text: |
+          <script src="./../components/backToTop.js"></script>
 filters:
   - ./../helpers/glossaryToJSON.lua
 ---
 
+{{< include "/components/_toc.qmd" >}}
+
+<back-to-top></back-to-top>
+
 # Atlas Definitions
 
-<div id="h1-list"></div>
-
 ```{=html}
-<div id="toc" class="atlas-toc"></div>
-
 <input
   type="text"
   id="searchBox"
   placeholder="Search glossary..."
-  style="margin-bottom: 20px; padding: 8px; width: 100%; max-width: 400px;"
+style="margin-bottom: 10px; padding: 8px; width: 100%; max-width: 400px; max-height : 40px;"
 />
 
 <div id="output"></div>
@@ -74,7 +80,6 @@ if (navEnd) {
           currentLang = lang.code;
           window.currentLang = lang.code;
           renderGlossary();
-          renderTOC();
           updateSearchPlaceholder();
         }
       });
@@ -92,6 +97,7 @@ if (navEnd) {
 </script>
 ```
 
+```{=html}
 <script>
 let currentLang = 'EN';
 let glossaryData = null;
@@ -105,7 +111,6 @@ fetch("./../../data/shared/glossary.json")
   .then(data => {
     glossaryData = data;
     renderGlossary();
-    renderTOC();
 
     // Language toggle
     document.querySelectorAll('input[name="language"]').forEach(radio => {
@@ -114,8 +119,6 @@ fetch("./../../data/shared/glossary.json")
         currentLang = event.target.value;
         updateSearchPlaceholder();
         renderGlossary();
-        renderTOC();
-        attachTOCListeners();
         updateBackToTopLabel();
       });
     });
@@ -149,84 +152,6 @@ function sanitizeId(str) {
     .toLowerCase()
     .replace(/[^a-z0-9]+/g, '-')
     .replace(/^-+|-+$/g, '');
-}
-
-// Build TOC dynamically
-function renderTOC() {
-  if (!glossaryData) return;
-
-  // Collect sections
-  const sections = {};
-  Object.entries(glossaryData).forEach(([key, entry]) => {
-    const section = entry.Section || "Other";
-    sections[section] = true;
-  });
-
-  const sectionNames = Object.keys(sections).sort();
-
-  // Build TOC HTML (class-based, no inline styling)
-  let tocHtml = `
-    <div class="atlas-toc-heading">Sections</div>
-    <div class="atlas-toc-list">
-  `;
-
-  sectionNames.forEach((section, i) => {
-    const id = sanitizeId(section);
-    tocHtml += `
-      <a class="toc-link" href="#section-${id}">${section}</a>
-    `;
-  });
-
-  tocHtml += `</div>`;
-
-  document.getElementById("toc").innerHTML = tocHtml;
-
-  attachGlossaryScrollSpy();
-}
-
-function attachTOCListeners() {
-  document.querySelectorAll('#toc a').forEach(link => {
-    link.addEventListener('click', e => {
-      e.preventDefault();
-      const targetId = link.getAttribute('href').substring(1);
-      const target = document.getElementById(targetId);
-      if (target) {
-        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-      }
-    });
-  });
-}
-
-function attachGlossaryScrollSpy() {
-  const links = Array.from(document.querySelectorAll("#toc .toc-link"));
-  if (!links.length) return;
-
-  // Map each link to its target section element
-  const sections = links.map(link => {
-    const id = link.getAttribute("href").slice(1); // remove #
-    return document.getElementById(id);
-  });
-
-  function setActiveLink(activeLink) {
-    links.forEach(link => link.classList.remove("active"));
-    if (activeLink) activeLink.classList.add("active");
-  }
-
-  function onScroll() {
-    // Compute distances
-    const distances = sections.map(sec =>
-      Math.abs(sec.getBoundingClientRect().top)
-    );
-
-    // Identify closest section
-    const minIndex = distances.indexOf(Math.min(...distances));
-    const activeLink = links[minIndex];
-
-    setActiveLink(activeLink);
-  }
-
-  window.addEventListener("scroll", onScroll);
-  onScroll(); // run once
 }
 
 // Render glossary
@@ -294,154 +219,4 @@ function renderGlossary() {
   document.getElementById('output').innerHTML = html;
 }
 </script>
-
-<button id="backToTopBtn" class="back-to-top">↑ Top</button>
-
-<style>
-.back-to-top {
-  position: fixed;
-  bottom: 25px;
-  right: 30px;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  display: none; /* Hidden by default */
-  border: none;
-  border-radius: 6px;
-  background-color: #333;
-  color: white;
-}
-</style>
-
-<script>
-const btn = document.getElementById('backToTopBtn');
-
-function updateBackToTopLabel() {
- btn.textContent = currentLang === "FR" ? "↑ Haut" : "↑ Top";
-}
-
-updateBackToTopLabel();
-
-// Show/hide button on scroll
-window.addEventListener('scroll', () => {
-  if (window.scrollY > 300) {
-    btn.style.display = 'block';
-  } else {
-    btn.style.display = 'none';
-  }
-});
-
-// Scroll smoothly to top when clicked
-btn.addEventListener('click', () => {
-  window.scrollTo({
-    top: 0,
-    behavior: 'smooth'
-  });
-});
-</script>
-
-<script>
-function observeH1ChangesForTOC(idsToIgnore = []) {
-    const outputElement = document.getElementById('h1-list');
-
-    // Create a Set for fast lookup of IDs to ignore
-    const ignoredIdSet = new Set(idsToIgnore);
-
-    // Helper function to convert text into a URL-friendly slug
-    const slugify = (text) => {
-        return text.toString().toLowerCase()
-            .trim()
-            .replace(/\s+/g, '-')
-            .replace(/[^\w\-]+/g, '')
-            .replace(/\-\-+/g, '-');
-    };
-
-    // 1. Function to refresh the TOC from the live DOM
-    const updateH1List = () => {
-        const h1Elements = document.querySelectorAll('h1');
-        const ul = document.createElement('ul');
-        const tocItems = [];
-
-        h1Elements.forEach((h1) => {
-            const h1Text = h1.textContent.trim();
-            let id = h1.id;
-
-            // Generate/Ensure ID
-            if (!id) {
-                id = slugify(h1Text);
-                let suffix = 1;
-                let finalId = id;
-                while (document.getElementById(finalId)) {
-                    finalId = id + '-' + suffix++;
-                }
-                h1.id = finalId;
-                id = finalId;
-            }
-
-            // --- 🔑 New Exclusion Check: Skip if the ID is in the ignored set ---
-            if (ignoredIdSet.has(id)) {
-                return; // Skip this H1 and move to the next one
-            }
-
-            // Create the link element
-            const li = document.createElement('li');
-            const a = document.createElement('a');
-
-            a.href = `#${id}`;
-            a.textContent = h1Text || '[Empty H1]';
-
-            li.appendChild(a);
-            ul.appendChild(li);
-        });
-
-        // Update the output element
-        outputElement.innerHTML = '';
-        if (ul.children.length > 0) {
-            outputElement.appendChild(ul);
-        } else {
-            outputElement.textContent = 'No eligible <h1> elements found.';
-        }
-
-        console.log('TOC updated. Ignored IDs:', idsToIgnore);
-    };
-
-    // 2. Set up the MutationObserver (configuration remains the same for efficiency)
-    const observer = new MutationObserver((mutationsList, observer) => {
-        // ... (mutation checking logic is unchanged) ...
-        let needsUpdate = false;
-        for (const mutation of mutationsList) {
-            if (mutation.type === 'childList') {
-                const relevantNodes = [...mutation.addedNodes, ...mutation.removedNodes];
-                if (relevantNodes.some(node => node.nodeType === 1 && (node.matches('h1') || node.querySelector('h1')))) {
-                    needsUpdate = true;
-                    break;
-                }
-            } else if (mutation.type === 'characterData') {
-                if (mutation.target.parentElement && mutation.target.parentElement.matches('h1')) {
-                    needsUpdate = true;
-                    break;
-                }
-            }
-        }
-
-        if (needsUpdate) {
-            requestAnimationFrame(updateH1List);
-        }
-    });
-
-    const config = { childList: true, subtree: true, characterData: true };
-    observer.observe(document.body, config);
-    updateH1List();
-
-    return {
-        update: updateH1List,
-        disconnect: () => observer.disconnect()
-    };
-}
-
-// Ensure the HTML elements exist before running the function
-document.addEventListener('DOMContentLoaded', () => {
-    observeH1ChangesForTOC(['atlas-definitions-1']);
-});
-
-</script>
+```
